--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 								<h3><a href="#">Discord</a></h3>
 								<p>For extra information</p>
 								<p>Or if you get stuck</p>
-								<p>Join our discord server</p>
+								<p>Join our <a href="https://discord.gg/cdxSGaCq" target="_blank">discord server</a></p>
 							</article>
 						</div>
 						</div>
