--- a/index.html
+++ b/index.html
@@ -86,9 +86,10 @@
 							<article class="box style2">
 								<a href="#portfolio" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 								<h3><a href="#">Google drive</a></h3>
-								<p><a href="https://drive.google.com/file/d/1OQS9uuOpz-0RQm57NxcH0UFPNDmXbEFi/view?usp=sharing" target="_blank">Download</a> the client from google drive.</p>
-								<p>Add this line to your windows hosts file:</p>
-								<p>l2disciple.hoptop.org l2authd.lineage2.com</p>
+								<p><a href="https://drive.google.com/file/d/1OQS9uuOpz-0RQm57NxcH0UFPNDmXbEFi/view?usp=sharing" target="_blank">Download</a> the client from google drive.
+								<br> Extract the contents and locate the system folder. Run L2.exe
+								<br> Accounts are automatically created.
+								</p>
 							</article>
 						</div>
 					
