--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 							<section class="box style1">
 								<h3>Rates</h3>
 								<p>Xp: x10
-								<br>Sp: x20
-								<br>Adena: x20
+								<br>Sp: x35
+								<br>Adena: x50
 								<br>Safe enchant: +4
 								<br>Max enchant: +16
 								<br>Full buffer
@@ -66,7 +66,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<h3>Accounts</h3>
-								<p>Accounts are autocreate.</p>
+								<p>Accounts are created automatically.</p>
 								<p>Character deletion is instant.</p>
 							</section>
 						</div>
