Added vote on top100arena

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 	</head>
 	<body class="is-preload">
 
+		<div class="rank-one">
+			<div>
+				<a href='https://www.top100arena.com/category/lineage2?vote=100077' title='L2 Disciple' target="_blank"><img class="rank-one-image" src='https://www.top100arena.com/rankbadge/100077' alt='Lineage 2 private server'></a>
+			</div>
+			<div>
+				<a href='https://www.top100arena.com/category/lineage2?vote=100077' title='L2 Disciple' target="_blank"><img class="rank-one-image" src='https://www.top100arena.com/hit/100077/big' alt='Lineage 2 private server' width='88px' height='56px'></a>
+			</div>
+		</div>
+
 		<!-- Nav -->
 			<nav id="nav">
 				<ul class="container">
