--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 								<h3><a href="#">Google drive</a></h3>
 								<p><a href="https://drive.google.com/file/d/1UmyHiL3KXc9TpX4cVsTyuDy3FTDkdncC/view?usp=sharing" target="_blank">Download</a> the client from google drive.
 								<br> Extract the contents and locate the system folder. Run L2.exe
-								<br> <a href="https://drive.google.com/file/d/1aVZbPFK7Uj_foJoKbQinRnF4gyPjdqsf/view?usp=sharing" target="_blank">System</a> only here.
+								<br> <a href="https://www.idrive.com/idrive/sh/sh?k=b3h7q6a2k2" target="_blank">System</a> only here.
 								<br> Accounts are automatically created.
 								</p>
 							</article>
