--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 								<h3><a href="#">Discord</a></h3>
 								<p>For extra information</p>
 								<p>Or if you get stuck</p>
-								<p>Join our <a href="https://discord.gg/WqjZm5v3" target="_blank">discord server</a></p>
+								<p>Join our <a href="https://discord.gg/qGhz9zxJ6" target="_blank">discord server</a></p>
 							</article>
 						</div>
 						</div>
